@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.787 2008/10/29 14:48:59 ub Exp $
+# $Id: CHANGES,v 1.788 2008/10/29 15:30:49 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -34,6 +34,8 @@
     availabe in online repository packages.
 
 2.3.4 (2008/??/??)
+ - (2008/10/29) Fixed bug# 2736 - AdminUser&Subaction=Change - Valid is
+    automatically changed
  - (2008/10/29) Fixed bug# 2710 - Error: Module 'Kernel::Modules::' not found!
  - (2008/10/28) Fixed bug# 3402 - AgentLinkObject crashes with "Got no
     UserLanguage" if browser sends exotic language.
